# bitap

./: .travis.yml  Cargo.toml  README.md
src/: alphabet.rs  lib.rs  main.rs
